...


@Composable
fun Greeting() {
    Surface(color = Color.Yellow) {
        Text(text = "Hi!", Modifier.testTag("component1"))
        Text(text = "hi, its me", Modifier.testTag("component2"))

    }
}

